[package]
name = "rich-logger"
description = "Rich logger implmentation"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/eatmynerds/rich-logger"
readme = "README.md"
authors = ["Jason Spalti", "Jonathan Cooper"]

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
log = { version = "0.4.22", features = ["std"] }
