[package]
name = "rich-logger"
description = "Rich logger implmentation in rust"
version = "0.1.6"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/eatmynerds/rich-logger"
readme = "README.md"
authors = ["Jason Spalti", "Jonathan Cooper"]

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
log = { version = "0.4.22", features = ["std"] }
serde = { version = "1.0.217", optional = true, features = ["derive"] } 
serde_json = { version = "1.0.134", optional = true } 

[features]
async = []
json = [ "dep:serde", "dep:serde_json" ]
