[package]
name = "rich-logger"
description = "Rich logger implmentation in rust"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/eatmynerds/rich-logger"
readme = "README.md"
authors = ["Jason Spalti", "Jonathan Cooper"]

[dependencies]
chrono = "0.4.39"
crossterm = "0.28.1"
log = { version = "0.4.22", features = ["std"] }

[features]
async = []
